--- a/.github/workflows/push_to_galaxy.yml
+++ b/.github/workflows/push_to_galaxy.yml
@@ -34,4 +34,4 @@ jobs:
       - name: "Import to Galaxy."
         run: >-
           ansible-galaxy role import --token ${{ secrets.GALAXY_API_TOKEN }}
-          francomile $(echo ${{ env.GITHUB_REPOSITORY }} | cut -d/ -f2 )
+          francomile $(echo ${{ github.repository }} | cut -d/ -f2 )
